# elevator-sim

./: .gitattributes  .gitignore  .gitmodules  INSTRUCTIONS.md  PLAN.md  README.md  main.py  minimum_cost_log.json  pyproject.toml  round_robin_log.json  sample_input.csv
.githooks/: pre-commit
elevator_sim/: __init__.py  api.py
elevator_sim/core/: __init__.py  metrics.py  models.py  state_log.py
elevator_sim/simulation/: __init__.py  decisions.py  events.py  simulation.py  snapshots.py
elevator_sim/strategies/: __init__.py  base.py  collective_control.py  minimum_cost.py  nearest_car.py  nearest_car_same_direction.py  round_robin.py
elevator_sim/workload/: __init__.py  base.py  comparison.py  file_source.py  passenger_source.py
frontend/: PLAN.md  README.md  WIREFRAME.html  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
frontend/coverage/: clover.xml  coverage-final.json  index.html
frontend/src/: App.test.tsx  App.tsx  main.tsx  simulation.test.ts  simulation.ts  theme.test.ts  theme.ts  types.ts
sample_data/: minimum_cost_log.json  nearest_car_log.json  nearest_car_same_direction_log.json  round_robin_log.json  sample_rush_hour.csv
scripts/: update_project_time.sh
tests/: __init__.py  test_main.py  test_models.py  test_simulation.py  test_workload.py  test_workload_sources.py
tests/core/: __init__.py  test_metrics.py  test_models.py  test_state_log.py
tests/simulation/: __init__.py  test_simulation.py
tests/strategies/: __init__.py  conftest.py  test_minimum_cost.py  test_nearest_car.py  test_round_robin.py  (+1 more)
(+47 files in other folders)
