[project]
name = "elevator-sim"
version = "0.1.0"
description = "Elevator simulation project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich==13.9.4",
    "rich-argparse==1.8.0",
]

[dependency-groups]
dev = [
    "black==26.5.1",
    "pylint==3.3.3",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "--cov=elevator_sim --cov-report=term-missing --cov-fail-under=80"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "duplicate-code",
    "too-few-public-methods",
    "too-many-instance-attributes",
]

[tool.black]
line-length = 120
target-version = ["py312"]
